syntax = "proto3";

package booklend;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/rpc/code.proto";

message RegisterBook {
  string bookId = 1;
  string title = 2;
  string isbn = 3;
}

message LendBook {
  string bookId = 1;
  string borrower = 2;
  google.protobuf.Timestamp date = 3;
  google.protobuf.Duration expectedDuration = 4;
}

message ReturnBook {
  string bookId = 1;
  google.protobuf.Timestamp date = 3;
}

message CommandStatus {
  google.rpc.Code code = 1;

  string message = 2;
}
