syntax = "proto3";

package booklend;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message BookRegistered {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string title = 3;
  string isbn = 4;
}

message BookLent {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string borrower = 3;
  google.protobuf.Timestamp date = 4;
  google.protobuf.Duration expectedDuration = 5;
}

message BookReturned {
  string id = 1;
  google.protobuf.Timestamp timestamp = 2;
  string by = 3;
  google.protobuf.Timestamp date = 4;
  google.protobuf.Duration lentDuration = 5;
}
